tests/good/simple31.tig
var x := 1/range(1,1)
