tests/bad/simple16.tig
var x := if range (0,2000000) = 42 then 1/0 else 0